--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ firebase-debug.log*
 
 # Firebase config
 firebase-app.js
+js/firebase-app.js
+public/firebase-app.js
 
 # Uncomment this if you'd like others to create their own Firebase project.
 # For a team working on the same Firebase project(s), it is recommended to leave
