--- a/firebase.json
+++ b/firebase.json
@@ -1,13 +1,13 @@
 {
-  "hosting": {
-    "public": "public",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ]
-  },
-  "database": {
-    "rules": "database.rules.json"
-  }
+	"hosting": {
+		"public": "public",
+		"ignore": [ "firebase.json", "**/.*", "**/node_modules/**" ],
+		"redirects": [
+			{ "source": "**", "destination": "/public" },
+			{ "source": "/public/orders", "destination": "/public" }
+		]
+	},
+	"database": {
+		"rules": "database.rules.json"
+	}
 }
