--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
 		"jest": "^24.9.0"
 	},
 	"dependencies": {
-		"moment": "^2.24.0"
+		"express": "^4.17.1",
+		"firebase-admin": "^8.6.0",
+		"moment": "^2.24.0",
+		"nodemon": "^1.19.3"
 	}
 }
