--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
 	"dependencies": {
 		"express": "^4.17.1",
 		"firebase-admin": "^8.6.0",
+		"mocha": "^6.2.1",
 		"moment": "^2.24.0",
 		"nodemon": "^1.19.3"
+	},
+	"scripts": {
+		"test": "mocha"
 	}
 }
