added client contact info to card

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "es-alimento"
+    "default": "es-alimento",
+    ".": "zabsal",
+    "zabsal": "zabsal",
+    "es": "es-alimento"
   }
 }
